Fix unnecessary whitespace on full width pages

--- a/css/article.scss
+++ b/css/article.scss
@@ -201,7 +201,6 @@ nav.tags {
     font-size: 80%;
     font-style: italic;
     margin-bottom:10px;
-    margin-top: 10px;
 }
 
 main .citation {
@@ -596,6 +595,10 @@ dd p:first-child {
 /* ===============
     Maximal Width
    =============== */
+
+    main {
+        margin-top: 10px;
+    }
 
     nav.tags.floating {
         width: 300px;
